restyle and add readme

--- a/html/index.html
+++ b/html/index.html
@@ -60,12 +60,12 @@
             <div id="payment_div" style="display: none">
                 <code id="address" style="word-break: break-word"></code>
                 <p id="payment_status"></p>
-                <img
-                    id="qr"
-                    class="img-fluid"
-                    style="display: none; max-width: 300px"
-                />
             </div>
+            <img
+                id="qr"
+                class="mx-auto d-block"
+                style="display: none; max-width: 300px"
+            />
         </div>
     </div>
 </html>
