minor styling improvements

--- a/html/index.html
+++ b/html/index.html
@@ -55,17 +55,18 @@
                     </div>
                 </div>
             </form>
-            <br />
             <p id="payment_response"></p>
             <div id="payment_div" style="display: none">
                 <code id="address" style="word-break: break-word"></code>
-                <p id="payment_status"></p>
             </div>
+            <br />
+            <br />
             <img
-                id="qr"
-                class="mx-auto d-block"
-                style="display: none; max-width: 300px"
+            id="qr"
+            class="mx-auto d-block"
+            style="display: none; max-width: 300px"
             />
+            <h3 id="payment_status"></h3>
         </div>
     </div>
 </html>
