use banner instead of h1

--- a/html/index.html
+++ b/html/index.html
@@ -32,7 +32,7 @@
 
     <div class="row vertical-center cover-container fill vh-100 h-100 w-100">
         <div class="col-lg-5 mx-auto g-0 p-4 text-break">
-            <h1>nolooking</h1>
+            <img src="banner.gif">
             <h3>
                 Assembled for the
                 <a
