--- a/html/index.html
+++ b/html/index.html
@@ -32,7 +32,9 @@
 
     <div class="row vertical-center cover-container fill vh-100 h-100 w-100">
         <div class="col-lg-5 mx-auto g-0 p-4 text-break">
-            <img src="banner.gif">
+            <a href="#">
+                <img src="banner.gif">
+            </a>
             <h3>
                 Assembled for the
                 <a
