reduce logo size and add header line

--- a/html/index.html
+++ b/html/index.html
@@ -33,7 +33,7 @@
     <div class="row vertical-center cover-container fill vh-100 h-100 w-100">
         <div class="col-lg-5 mx-auto g-0 p-4 text-break">
             <a href="#">
-                <img src="banner.gif">
+                <img src="banner.gif" style="max-width:400px;" class="img-responsive">
             </a>
             <h3>
                 Assembled for the
@@ -45,6 +45,7 @@
                 </a>
                 Hackathon.
             </h3>
+            <hr>
             <div>
                 <nav class="navbar navbar-expand-sm">
                     <button
@@ -86,10 +87,8 @@
                     </div>
                 </nav>
             </div>
-            <br />
             <h3>Members:</h3>
             <p id="members"></p>
-            <br />
             <br />
             <p>
                 <b> Making Lightning Channels Easier and More Private </b>
@@ -111,7 +110,7 @@
                     > Creating privacy services for various forms of bitcoin.
                     <br />
                     <br />
-                    > Focus on developing the economies which use blinded ecash
+                    > Focus on developing tools for economies which use blinded ecash
                     from federated chaumian mints.
                 </code>
             </p>
