--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,25 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hackathon Team</title>
+        <!-- Primary Meta Tags -->
+        <title>nolooking - Legends of Lightning Hackathon Team</title>
+        <meta name="title" content="nolooking - Legends of Lightning Hackathon Team">
+        <meta name="description" content="DAN NICK ARMIN">
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://nolooking.chaincase.app/">
+        <meta property="og:title" content="nolooking - Legends of Lightning Hackathon Team">
+        <meta property="og:description" content="DAN NICK ARMIN">
+        <meta property="og:image" content="https://nolooking.chaincase.app/header.png">
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image">
+        <meta property="twitter:url" content="https://nolooking.chaincase.app/">
+        <meta property="twitter:title" content="nolooking - Legends of Lightning Hackathon Team">
+        <meta property="twitter:description" content="DAN NICK ARMIN">
+        <meta property="twitter:image" content="https://nolooking.chaincase.app/header.png">
+
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
