add support to main page

--- a/html/donate.html
+++ b/html/donate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Pay</title>
+        <title>Support Us</title>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -33,7 +33,7 @@
 
     <div class="row vertical-center cover-container fill vh-100 h-100 w-100">
         <div class="col-lg-5 mx-auto g-0 p-4 text-break">
-            <h2>Pay</h2>
+            <h2>Donate</h2>
             <form onsubmit="return click_pay()">
                 <div class="input-group">
                     <input
