--- a/html/index.html
+++ b/html/index.html
@@ -115,12 +115,7 @@
                                 >
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link disabled" href="#"
-                                    >Contact</a
-                                >
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link disabled" href="#"
+                                <a class="nav-link" href="https://makers.bolt.fun/project/nolooking"
                                     >Maker.fun</a
                                 >
                             </li>
