--- a/html/index.html
+++ b/html/index.html
@@ -69,7 +69,7 @@
 
     <div class="row vertical-center cover-container fill vh-100 h-100 w-100">
         <div class="col-lg-5 mx-auto g-0 p-4 text-break">
-            <a href="#">
+            <a href="/">
                 <img
                     src="banner.gif"
                     style="max-width: 400px"
@@ -123,6 +123,12 @@
                     </div>
                 </nav>
             </div>
+            <hr>
+            <br>
+            <h3>Recent Posts:</h3>
+            <h3><a href="1-foundation.html">Week 1 Retro: Building the Foundation</a></h3>
+            <h3><a href="rustapps.html">Multistage Rust Docker Builds for Umbrel Apps</a></h3>
+            <br>
             <h3>Members:</h3>
             <p id="members"></p>
             <br />
