--- a/html/1-foundation.html
+++ b/html/1-foundation.html
@@ -3,6 +3,7 @@
     <head>
         <!-- Primary Meta Tags -->
         <title>nolooking - Week 1 Retro: (Building the Foundation)</title>
+        <link rel="icon" type="image/x-icon" href="/favicon.ico">
         <meta
             name="title"
             content="nolooking - Week 1 Retro: (Building the Foundation)"
