--- a/html/blankblog.html
+++ b/html/blankblog.html
@@ -16,6 +16,7 @@ MD2HTMLBODY
     <head>
         <!-- Primary Meta Tags -->
         <title>nolooking - TITLE</title>
+        <link rel="icon" type="image/x-icon" href="/favicon.ico">
         <meta
             name="title"
             content="nolooking - TITLE"
