--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,7 @@
     <head>
         <!-- Primary Meta Tags -->
         <title>nolooking - Legends of Lightning Hackathon Team</title>
+        <link rel="icon" type="image/x-icon" href="/favicon.ico">
         <meta
             name="title"
             content="nolooking - Legends of Lightning Hackathon Team"
