--- a/html/index.html
+++ b/html/index.html
@@ -127,8 +127,8 @@
             <hr>
             <br>
             <h3>Recent Posts:</h3>
-            <h3><a href="1-foundation.html">Week 1 Retro: Building the Foundation</a></h3>
-            <h3><a href="rustapps.html">Multistage Rust Docker Builds for Umbrel Apps</a></h3>
+            <h3><a href="https://makers.bolt.fun/story/week-1-retro-building-the-foundation--229">Week 1 Retro: Building the Foundation</a></h3>
+            <h3><a href="https://makers.bolt.fun/story/multistage-rust-docker-builds-for-umbrel-apps--235">Multistage Rust Docker Builds for Umbrel Apps</a></h3>
             <br>
             <h3>Members:</h3>
             <p id="members"></p>
