Better style and remove unused

--- a/html/index.html
+++ b/html/index.html
@@ -161,7 +161,8 @@
     </div>
     <div class="row">
         <div class="col-lg-6 mx-auto g-0 p-4 text-break">
-            <h2>Support Us</h2>
+            <h1>Support Us</h1>
+            <h3>Lightning</h3>
             <form onsubmit="return click_pay()">
                 <div class="input-group">
                     <input
@@ -183,7 +184,9 @@
                     </div>
                 </div>
             </form>
-            <h3 style="float:right">OR</h3>
+            <br>
+            <h3 style="text-align: center;">OR</h3>
+            <h3>E-Cash</h3>
             <form onsubmit="return send_ecash()">
                 <div class="input-group">
                     <input
@@ -213,9 +216,9 @@
             <br />
             <br />
             <img
-                id="qr"
-                class="mx-auto d-block"
-                style="display: none; max-width: 300px"
+            id="qr"
+            class="mx-auto d-block"
+            style="display: none; max-width: 300px"
             />
             <h3 id="payment_status"></h3>
         </div>
