--- a/html/donate.html
+++ b/html/donate.html
@@ -34,7 +34,8 @@
 
     <div class="row vertical-center cover-container fill vh-100 h-100 w-100">
         <div class="col-lg-6 mx-auto g-0 p-4 text-break">
-            <h2>Donate</h2>
+            <h1>Support Us</h1>
+            <h3>Lightning</h3>
             <form onsubmit="return click_pay()">
                 <div class="input-group">
                     <input
@@ -56,7 +57,9 @@
                     </div>
                 </div>
             </form>
-            <h3 style="float:right">OR</h3>
+            <br>
+            <h3 style="text-align: center;">OR</h3>
+            <h3>E-Cash</h3>
             <form onsubmit="return send_ecash()">
                 <div class="input-group">
                     <input
