--- a/html/index.html
+++ b/html/index.html
@@ -77,6 +77,7 @@
                     class="img-responsive"
                 />
             </a>
+	    <br>
             <h3>
                 Assembled for the
                 <a
@@ -116,6 +117,7 @@
                         >
                     </li>
                 </ul>
+	    	<p><a href="/vault.html">🏦</a></p>
             </div>
             <hr>
             <br>
@@ -273,7 +275,13 @@
                         <a href="https://nolooking.chaincase.app/"><img src="webring-img/nolooking.gif" alt="nolooking" /></a>
                     </div>  
                 </div>
-            </html>
+                <div style="min-height: 200px">&nbsp;</div>
+                <p style="text-align: center">...</p>
+            	<div style="min-height: 10000px">&nbsp;</div>
+	    </html>
+            <centre>
+                <iframe src="/vault.html" style="padding: 0px; border: 0px;" height="900px" width="95%" title="vault"></iframe>
+            </centre>
         </div>
     </div>
 
