--- a/html/index.html
+++ b/html/index.html
@@ -126,9 +126,13 @@
             </div>
             <hr>
             <br>
-            <h3>Recent Posts:</h3>
-            <h3><a href="https://makers.bolt.fun/story/week-1-retro-building-the-foundation--229">Week 1 Retro: Building the Foundation</a></h3>
+            <h3>Posts:</h3>
+            <h3><a href="https://makers.bolt.fun/story/try-us-on-umbrel-nolooking--324">Try us on Umbrel!</a> (most recent)</h3>
+            <h3><a href="https://makers.bolt.fun/story/nolooking-week-3-retro--318">Nolooking: week 3 retro</a></h3>
+            <h3><a href="https://makers.bolt.fun/story/week-2-recap--274">Nolooking: week 2 recap</a></h3>
             <h3><a href="https://makers.bolt.fun/story/multistage-rust-docker-builds-for-umbrel-apps--235">Multistage Rust Docker Builds for Umbrel Apps</a></h3>
+            <h3><a href="https://makers.bolt.fun/story/week-1-retro-building-the-foundation--229">Week 1 Retro: Building the Foundation</a></h3>
+            <h3><a href="https://makers.bolt.fun/story/introducing-nolooking--182">Introducing nolooking</a></h3>
             <br>
             <h3>Members:</h3>
             <p id="members"></p>
