--- a/html/index.html
+++ b/html/index.html
@@ -112,6 +112,7 @@
             <hr>
             <br>
             <h3><i>Joining the lightning network is daunting</i></h3>
+            <img style="display:inline" src="https://raw.githubusercontent.com/getumbrel/umbrel-apps-gallery/4075c8639cb4cde10c7546454dbb3a014aff1944/nolooking/1.jpg" width="90%">
             <p>
                 <b>Open All Your Channels in a Single Transaction!</b>
                 <br>
@@ -129,9 +130,9 @@
             <br>
             <h3>Members:</h3>
             <p id="members"></p>
-            <br />
             <hr>
-
+            <hr>
+            <br>
             <h3><i>nolooking for easy lightning onboarding</i></h3>
             <p>
                 If you follow the usual setup process for a new lightning node, you must first fund your new node using an on-chain transaction. After first depositing to your node you must wait for several ~10-minute confirmations, and then you can open channels one at a time. 
@@ -140,7 +141,7 @@
                 Opening each channel costs on-chain mining fees, and makes you wait for confirmations between successive channel opens. Plus it is difficult to know when you have sufficient connections.
             </p>
             <br>
-            <h3 style="font-family: Lucida Console">Research areas</h3>
+            <h3>Research areas</h3>
             <p>
                 <b> Making Lightning Channels Easier and More Private </b>
                 <br />
