--- a/html/index.html
+++ b/html/index.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <!-- Primary Meta Tags -->
-        <title>nolooking - Legends of Lightning Hackathon Team</title>
+        <title>nolooking - Legends of Lightning Tournament Team</title>
         <link rel="icon" type="image/x-icon" href="/favicon.ico">
         <meta
             name="title"
-            content="nolooking - Legends of Lightning Hackathon Team"
+            content="nolooking - Legends of Lightning Tournament Team"
         />
         <meta name="description" content="DAN NICK ARMIN" />
 
@@ -15,7 +15,7 @@
         <meta property="og:url" content="https://nolooking.chaincase.app/" />
         <meta
             property="og:title"
-            content="nolooking - Legends of Lightning Hackathon Team"
+            content="nolooking - Legends of Lightning Tournament Team"
         />
         <meta property="og:description" content="DAN NICK ARMIN" />
         <meta
@@ -31,7 +31,7 @@
         />
         <meta
             property="twitter:title"
-            content="nolooking - Legends of Lightning Hackathon Team"
+            content="nolooking - Legends of Lightning Tournament Team"
         />
         <meta property="twitter:description" content="DAN NICK ARMIN" />
         <meta
@@ -85,9 +85,17 @@
                 >
                     Legends of Lightning
                 </a>
-                Hackathon.
+                Tournament.
             </h3>
             <hr />
+            <br>
+            <h3><i>Joining the lightning network is daunting</i></h3>
+            <img style="display:inline" src="https://raw.githubusercontent.com/getumbrel/umbrel-apps-gallery/4075c8639cb4cde10c7546454dbb3a014aff1944/nolooking/1.jpg" width="90%">
+            <p>
+                <b>Open All Your Channels in a Single Transaction!</b>
+                <br>
+                <i>Try nolooking on your <a href="https://umbrel.com/" target="_blank">Umbrel</a> today!</i>
+            </p>
             <div>
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -111,22 +119,16 @@
             </div>
             <hr>
             <br>
-            <h3><i>Joining the lightning network is daunting</i></h3>
-            <img style="display:inline" src="https://raw.githubusercontent.com/getumbrel/umbrel-apps-gallery/4075c8639cb4cde10c7546454dbb3a014aff1944/nolooking/1.jpg" width="90%">
-            <p>
-                <b>Open All Your Channels in a Single Transaction!</b>
-                <br>
-                <i>Try nolooking on your <a href="https://umbrel.com/" target="_blank">Umbrel</a> today!</i>
-            </p>
-            <br>
-            <h3>Posts:</h3>
-            <h3><a href="https://makers.bolt.fun/story/punching-through-week-4--370">Punching through week 4</a> (most recent)</h3>
-            <h3><a href="https://makers.bolt.fun/story/try-us-on-umbrel-nolooking--324">Try us on Umbrel!</a></h3>
-            <h3><a href="https://makers.bolt.fun/story/nolooking-week-3-retro--318">Nolooking: week 3 retro</a></h3>
-            <h3><a href="https://makers.bolt.fun/story/week-2-recap--274">Nolooking: week 2 recap</a></h3>
-            <h3><a href="https://makers.bolt.fun/story/multistage-rust-docker-builds-for-umbrel-apps--235">Multistage Rust Docker Builds for Umbrel Apps</a></h3>
-            <h3><a href="https://makers.bolt.fun/story/week-1-retro-building-the-foundation--229">Week 1 Retro: Building the Foundation</a></h3>
-            <h3><a href="https://makers.bolt.fun/story/introducing-nolooking--182">Introducing nolooking</a></h3>
+            <div style="padding: 15px">
+                <h3>Posts:</h3>
+                <h4><a href="https://makers.bolt.fun/story/punching-through-week-4--370">Punching through week 4</a> (most recent)</h4>
+                <h4><a href="https://makers.bolt.fun/story/try-us-on-umbrel-nolooking--324">Try us on Umbrel!</a></h4>
+                <h4><a href="https://makers.bolt.fun/story/nolooking-week-3-retro--318">Nolooking: week 3 retro</a></h4>
+                <h4><a href="https://makers.bolt.fun/story/week-2-recap--274">Nolooking: week 2 recap</a></h4>
+                <h4><a href="https://makers.bolt.fun/story/multistage-rust-docker-builds-for-umbrel-apps--235">Multistage Rust Docker Builds for Umbrel Apps</a></h4>
+                <h4><a href="https://makers.bolt.fun/story/week-1-retro-building-the-foundation--229">Week 1 Retro: Building the Foundation</a></h4>
+                <h4><a href="https://makers.bolt.fun/story/introducing-nolooking--182">Introducing nolooking</a></h4>
+            </div>
             <br>
             <h3>Members:</h3>
             <p id="members"></p>
