--- a/html/index.html
+++ b/html/index.html
@@ -93,8 +93,8 @@
                     <li class="nav-item">
                         <a
                             class="nav-link"
-                            href="https://github.com/nolooking"
-                            >Github</a
+                            href="https://github.com/chaincase-app/nolooking"
+                            >App (Github)</a
                         >
                     </li>
                     <li class="nav-item">
@@ -113,11 +113,14 @@
             <br>
             <h3><i>Joining the lightning network is daunting</i></h3>
             <p>
-                <b>We abstract the whole "getting connected" stage of lightning node setup for operators into a single QR code that prepares one bitcoin transaction to get a node fully connected to multiple channels.</b>
+                <b>Open All Your Channels in a Single Transaction!</b>
+                <br>
+                <i>Try nolooking on your <a href="https://umbrel.com/" target="_blank">Umbrel</a> today!</i>
             </p>
             <br>
             <h3>Posts:</h3>
-            <h3><a href="https://makers.bolt.fun/story/try-us-on-umbrel-nolooking--324">Try us on Umbrel!</a> (most recent)</h3>
+            <h3><a href="https://makers.bolt.fun/story/punching-through-week-4--370">Punching through week 4</a> (most recent)</h3>
+            <h3><a href="https://makers.bolt.fun/story/try-us-on-umbrel-nolooking--324">Try us on Umbrel!</a></h3>
             <h3><a href="https://makers.bolt.fun/story/nolooking-week-3-retro--318">Nolooking: week 3 retro</a></h3>
             <h3><a href="https://makers.bolt.fun/story/week-2-recap--274">Nolooking: week 2 recap</a></h3>
             <h3><a href="https://makers.bolt.fun/story/multistage-rust-docker-builds-for-umbrel-apps--235">Multistage Rust Docker Builds for Umbrel Apps</a></h3>
