More urgent message

--- a/html/index.html
+++ b/html/index.html
@@ -90,7 +90,9 @@
             <hr />
             <br>
             <h3><i>Joining the lightning network is daunting</i></h3>
-            <img style="display:inline; border-radius: 25px;" src="nolooking_img.png" width="90%">
+            <a href="https://try.chaincase.app" target="_blank">
+                <img style="display:inline; border-radius: 25px;" src="nolooking_img.png" width="90%">
+            </a>
             <p>
                 <br>
                 <b>Open All Your Channels in a Single Transaction!</b>
