--- a/html/index.html
+++ b/html/index.html
@@ -102,6 +102,13 @@
                     <li class="nav-item">
                         <a
                             class="nav-link"
+                            href="https://twitter.com/utxoclub/status/1592460852690419712"
+                            >[Video Tutorial using Umbrel & Sparrow Wallet]</a
+                        >
+                    </li>
+                    <li class="nav-item">
+                        <a
+                            class="nav-link"
                             href="https://github.com/chaincase-app/nolooking"
                             >App (Github)</a
                         >
@@ -123,7 +130,9 @@
             <br>
             <div style="padding: 15px">
                 <h3>Posts:</h3>
-                <h4><a href="https://makers.bolt.fun/story/punching-through-week-4--370">Punching through week 4</a> (most recent)</h4>
+                <h4><a href="https://makers.bolt.fun/story/week-5-nolooking-ppps--414">Week 5 nolooking ⚡️👀 PPPs</a> (most recent)</h4>
+                <h4><a href="https://twitter.com/utxoclub/status/1592460852690419712">[Video] How to use nolooking with umbrel & sparrow wallet</a></h4>
+                <h4><a href="https://makers.bolt.fun/story/punching-through-week-4--370">Punching through week 4</a></h4>
                 <h4><a href="https://makers.bolt.fun/story/try-us-on-umbrel-nolooking--324">Try us on Umbrel!</a></h4>
                 <h4><a href="https://makers.bolt.fun/story/nolooking-week-3-retro--318">Nolooking: week 3 retro</a></h4>
                 <h4><a href="https://makers.bolt.fun/story/week-2-recap--274">Nolooking: week 2 recap</a></h4>
